tests/outref/TSC00E.ref
[ERROR] PATH:LINENUM DATE TIME : ERR_TYPE_NOT_COMPATIBLE : Type VARCHAR not compatible for arithmetic operations
Error with syntax near (line 1, column 7):

select names.firstName + 5 from names;
       ^^^^^^^^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select names.firstName + 5 from names;

